# cpp-light-game-engine-hades

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  codeql-analysis.yml
.github/workflows/: codeql-analysis.yml
client/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/assimp/samples/SimpleOpenGL/: SimpleOpenGL.sln  SimpleOpenGL.vcxproj  UpgradeLog.htm
core/assimp/samples/SimpleOpenGL/Debug/: vc142.idb
core/assimp/samples/SimpleOpenGL/Debug/SimpleOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SimpleOpenGL.lastbuildstate
core/src/: asset-manager.cpp  asset-manager.h  camera.cpp  camera.h  editor.cpp  editor.h  events.h  hades.cpp  hades.h  main.cpp  manager.cpp  manager.h  model.h  model_complex.cpp  model_complex.h  opengl.h  physics.cpp  physics.h  plugin.h  scene.cpp  scene.h  scripts.cpp  scripts.h  shader.cpp  shader.h  shader_basic.h  shader_complex.h  sound.cpp  sound.h  thing.cpp  thing.h
editor/: CMakeLists.txt  main.cpp
